feat: add django_bootstrap5 module

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ markdown = "*"
 django-filter = "*"
 django-stubs = {extras = ["compatible-mypy"], version = "*"}
 djangorestframework-stubs = {extras = ["compatible-mypy"], version = "*"}
+django-bootstrap5 = "*"
 
 [dev-packages]
 pylint = "*"
