--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pillow = "^9.4.0"
 django-stubs = {extras = ["compatible-mypy"], version = "^1.15.0"}
 djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^1.9.1"}
 mypy = "1.0.1"
+djangorestframework-gis = "^1.0"
+requests = "^2.28.2"
+geopy = "^2.3.0"
 
 
 [build-system]
