--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ djangorestframework-gis = "^1.0"
 requests = "^2.28.2"
 geopy = "^2.3.0"
 django-leaflet = "^0.28.3"
+openrouteservice = "^2.3.3"
+notebook = "^6.5.3"
+numpy = "^1.24.2"
 
 
 [build-system]
